--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ body {
 
 .height-23 {
     height: 23rem;
+    transition: all 0.5s ease-in;
 }
 
 .view-1 {
@@ -138,7 +139,7 @@ body {
 }
 
 .view-2 {
-    background: gray;
+    background: #575757;
 }
 
 .box-footer {
